# ml_motion_v1

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  temp.txt
.claude/skills/grace-agent-docs/: SKILL.md  a_class_method_md_format.md
.claude/skills/ml-motion-ci/: SKILL.md
.github/workflows/: ci.yml
app/: Home.py
app/views/: analyze.py  annotation_qa.py  experiments.py  production.py  realtime.py
data/: .gitkeep  README.md
docker-compose/: docker-compose.yml  memo.txt
docs/: ml_motion_detection_spec.md  ml_motion_spec.md
docs/manual/: 01_analyze.md  02_realtime.md  03_experiments.md  04_production.md  05_annotation_qa.md  README.md
experiments/: .gitkeep
models/: .gitkeep
pipeline/: __init__.py  active_learning.py  batch.py  benchmark.py  camera.py  claude_vision.py  dataset.py  detections.py  detector.py  device.py  experiments.py  export_model.py  realtime.py  registry.py  tracking.py  training.py  video.py  zones.py
pipeline/docs/: README.md  active_learning.md  batch.md  benchmark.md  camera.md  claude_vision.md  dataset.md  detections.md  detector.md  device.md  experiments.md  export_model.md  realtime.md  registry.md  tracking.md  training.md  video.md  zones.md
scripts/: check_mps.py  download_test_videos.py  fetch_sample_videos.sh
tests/: test_batch_fs.py  test_benchmark_runner.py  test_camera.py  test_claude_response.py  test_constants.py  test_detections.py  test_device.py  test_experiments.py  test_phase4.py  test_phase5.py  test_phase6.py  test_registry.py  test_results.py  test_zones.py
(+6 files in other folders)
