[project]
name = "ml-motion-v1"
version = "0.1.0"
description = "Video ML Analytics Studio — 動画ML解析プラットフォーム（検出/セグメンテーション/トラッキング/ゾーン解析 + Claude Vision）"
requires-python = ">=3.12,<3.13"

# Phase 0（基盤構築）で必要な最小依存セット。
# 重い学習依存（W&B 等）は Phase 4 以降で追加する。
dependencies = [
    "torch>=2.2",            # MPS バックエンド（M2 Mac）
    "torchvision>=0.17",
    "ultralytics>=8.3",      # YOLO11 検出/セグ/追跡
    "supervision>=0.24",     # 可視化・ゾーン解析
    "opencv-python>=4.9",    # フレーム抽出・カメラ取り込み
    "streamlit>=1.40",       # マルチページ UI
    "anthropic>=0.40",       # Claude API（Vision・要約・アノテ補助）
    "mlflow>=2.18,<3",       # 実験管理・Model Registry
    "python-dotenv>=1.0",    # .env 読み込み
    "pandas>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]
# Phase 3: ブラウザカメラ経路（streamlit-webrtc）。Continuity Camera 経路には不要。
realtime = [
    "streamlit-webrtc>=0.47",
    "av>=10",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
# リポジトリルートを import パスに載せ、editable インストール有無に関わらず
# `pipeline` パッケージを解決できるようにする（`uv run pytest` で No module named 'pipeline' を回避）。
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
# トップレベルの推論パッケージのみを配布対象にする。
packages = ["pipeline"]
